samples/_failures_safe/1761225622_1b5ef2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_620458c3.c: In function ‘main’:
./samples/SAFE/__tmp_620458c3.c:159:21: error: expected expression at end of input
  159 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_620458c3.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_620458c3.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_620458c3.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_620458c3.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_620458c3.c:159:21: error: expected declaration or statement at end of input
